# reddit-mcp

./: .gitignore  README.md  pyproject.toml
reddit_mcp/: __init__.py  reddit.py  server.py
